Memory leak on Blender Exit (possibly related to mixing BI and Cycles nodes and material data ) #48829

Closed
opened 2016-07-11 15:41:43 +02:00 by Vuk Gardašević · 4 comments

System Information
Amd X3 455, R7 360

Tested on:
Windows 7, blender versions: 4b0aeaf, 2.70a, a6ca8a1

Linux:
Ubuntu 16.04, blender version: 2b485e2
Arch Antergos, blender versions: 9d5661c, 47c47c7

Short description of error
After running a script that calls a prop search related to material data, blender reports GPU_link memory leaks on exit (with the -d parameter)
Example console/terminal output:
console_print.txt

Exact steps for others to reproduce the error
Run blender with -d --factory-startup parameters, open the blend file attached > run script > search for simple object operator > change material from the prop search dropdown list> OK > Exit Blender.

The leak also seems to be triggered by just selecting the other material in the properties.

The attached file contains one cycles and one blender internal simple material and the script.
test_mem_leak_simple_op.blend

**System Information** Amd X3 455, R7 360 Tested on: **Windows 7**, blender versions: 4b0aeaf, 2.70a, a6ca8a1 **Linux:** Ubuntu 16.04, blender version: 2b485e2 Arch Antergos, blender versions: 9d5661c, 47c47c7 **Short description of error** After running a script that calls a prop search related to material data, blender reports GPU_link memory leaks on exit (with the -d parameter) Example console/terminal output: [console_print.txt](https://archive.blender.org/developer/F321549/console_print.txt) **Exact steps for others to reproduce the error** Run blender with -d --factory-startup parameters, open the blend file attached > run script > search for simple object operator > change material from the prop search dropdown list> OK > Exit Blender. The leak also seems to be triggered by just selecting the other material in the properties. The attached file contains one cycles and one blender internal simple material and the script. [test_mem_leak_simple_op.blend](https://archive.blender.org/developer/F321553/test_mem_leak_simple_op.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

This issue was referenced by 5f95ffe350

This issue was referenced by 5f95ffe35034120189340cd413f24979da92109e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48829
No description provided.