Fix T48829: Memory leak on Blender Exit

It was possible to have missing outlink but GPUNodes in material.